# dash-flask-sample-app

./: README.md  config.py  pyproject.toml  setup.cfg  wsgi.py
app/: __init__.py  views.py
app/dash_apps/: __init__.py  custom_dash_app.py  experiment_detail_dash_app.py  experiment_list_dash_app.py
app/templates/: base.html  dash_layout.html  header.html  index.html  layout.html
scripts/: fix.sh  run.sh  setup.sh
