[tool.poetry]
name = "dash-flask-sample-app"
version = "0.1.0"
description = ""
authors = ["Tianxiao Ma <tianxiao.ma@citrix.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
dash = "^2.0.0"
pandas = "^1.3.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.11b1"
isort = "^5.10.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
